2.0.2.IPv6

Added second param to IPTableTransform.main for the name of the sensor in use.
Included sample IPTableTransform.py that outputs to a mysql DB
Changed name of python module from LookupMac to IPTableTransform
Fixed bug in pgsql.c where it was passing the mac address to HostIp2CharIp instead of the IP address (pgsql.c)
Fixed bug in pgsql.c where it was passing the wrong number of parameters to PQexecParams (pgsql.c)
Added support for excluding subnets. (conf.l conf.y)
Added mac record support for pgsql. (pgsql.c)

Cleaned up whitespace (bandwidthd.c)
Moved global variables from top of bandwidthd.c to bandwidthd.h 
	(help avoid namespace collisions if someone only looks in the header file)
Added struct for vlan headers (bandwidthd.h)
Added configure option for turning pgsql off (configure.in)
Added functions for ignoring subnets (bandwidthd.c)
Added configure option for embedding python for scripting and to optimize ip lookups (bandwidthd.c bandwidthd.h configure.in)


2.0.1

Make file tweaks
Add Support for SQLight database
Adhere more strictly to GNU coding standards for directories
Optional htdocs and log file locations specified at configure time
Optional bandwidthd.conf entries to specify htdocs and log file locations
Command line option help
Command line option for specifying a bandwidthd.conf file
Changed signal handling to avoid the parent thread dying from a hup during 
	CDF recovery
Fixed bug that could cause segfault if no devices exist that can be captured
	from and no device is specified in the bandwidthd.conf
Fixed bug in CDF recovery that may have been affecting recovery on FreeBSD systems.

2.0.1 
Big Feature - Added optional postgresql database logging mode and php for dynamic graph creation from 
	databases.  Great for big sites,  multiple sensors with very low overhead collect traffic statistics
	and log them to database.  Graphs are created when a user visits the page instead of burning CPU